--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -13,7 +13,9 @@
 @import 'components/form';
 @import 'components/visually_hidden';
 @import 'components/quote';
+@import 'components/turbo_progress_bar';
 
 // Layouts
 @import 'layouts/container';
 @import 'layouts/header';
+
