Debug print inside Quote after_create_commit and quote create.turbo_stream.erb. Duplicate turbo_streams seem to be interpreted as one turbo_stream - no duplicate quotes prepended to quotes#index

--- a/app/views/quotes/create.turbo_stream.erb
+++ b/app/views/quotes/create.turbo_stream.erb
@@ -1,2 +1,4 @@
+<%= puts '**** create.turbo_stream.erb ****' %>
+
 <%= turbo_stream.prepend 'quotes', @quote %>
 <%= turbo_stream.update Quote.new, '' %>
