--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<main class='container'>
+  <h1>Quote editor</h1>
+  <p>A blazing fast quote editor built with Hotwire</p>
+
+  <% if user_signed_in? %>
+    <%= link_to 'View quotes', quotes_path, class: 'btn btn--dark' %>
+  <% else %>
+    <%= linkt_to 'Sign in', new_user_session_path, class: 'btn btn--dark' %>
+  <% end %>
+</main>
