--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -14,7 +14,7 @@
 @import 'components/visually_hidden';
 @import 'components/quote';
 @import 'components/turbo_progress_bar';
-@import 'components/navbar'
+@import 'components/navbar';
 
 // Layouts
 @import 'layouts/container';
