--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,6 @@
   <% if user_signed_in? %>
     <%= link_to 'View quotes', quotes_path, class: 'btn btn--dark' %>
   <% else %>
-    <%= linkt_to 'Sign in', new_user_session_path, class: 'btn btn--dark' %>
+    <%= link_to 'Sign in', new_user_session_path, class: 'btn btn--dark' %>
   <% end %>
 </main>
