Disable Turbo on new, edit, create, update and destroy links/forms(buttons) using data-turbo=false on them individually. Turbo.session.drive = false; in app/javascript/appication.js seemed to not disable Turbo on links/buttons(forms) inside a Turbo Frame (https://github.com/hotwired/turbo/issues/826)

--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -7,9 +7,11 @@
       <%= button_to "Delete",
                     quote_path(quote),
                     method: :delete,
+                    data: { turbo: false },
                     class: "btn btn--light" %>
       <%= link_to "Edit",
                   edit_quote_path(quote),
+                  data: { turbo: false },
                   class: 'btn btn--light' %>
 
     </div>
