--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for quote,
                     html: { 
                       class: "quote form",
+                      data: { turbo: false }
                     } do |f| %>
   <% if quote.errors.any? %>
     <div class='error-message'>
