--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -6,7 +6,8 @@
     <%= link_to "New quote", 
                  new_quote_path,
                  class: "btn btn--primary",
-                 data: { turbo_frame: dom_id(Quote.new) } %>
+                 data: { turbo_frame: dom_id(Quote.new),
+                         turbo: false } %>
   </div>
 
   <%= turbo_frame_tag Quote.new %>
