Re-enable Turbo on links and forms

--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -1,7 +1,6 @@
 <%= simple_form_for quote,
                     html: { 
-                      class: "quote form",
-                      data: { turbo: false }
+                      class: "quote form"
                     } do |f| %>
   <% if quote.errors.any? %>
     <div class='error-message'>
