--- a/app/views/quotes/create.turbo_stream.erb
+++ b/app/views/quotes/create.turbo_stream.erb
@@ -2,3 +2,4 @@
 
 <%= turbo_stream.prepend 'quotes', @quote %>
 <%= turbo_stream.update Quote.new, '' %>
+<%= turbo_stream.prepend 'flash', partial: 'layouts/flash' %>
