Add debug message to destroy.turbo_stream.erb

--- a/app/views/quotes/destroy.turbo_stream.erb
+++ b/app/views/quotes/destroy.turbo_stream.erb
@@ -1,2 +1,4 @@
+<%= puts '**** destroy.turbo_stream.erb ****' %>
+
 <%= turbo_stream.remove @quote %>
 <%= turbo_stream.prepend 'flash', partial: 'layouts/flash' %>
