--- a/app/views/quotes/update.turbo_stream.erb
+++ b/app/views/quotes/update.turbo_stream.erb
@@ -1,4 +1,4 @@
 <%= puts '**** update.turbo_stream.erb ****' %>
 
 <%= turbo_stream.replace @quote %>
-<%= turbo_stream.prepend 'flash', partial: 'layouts/flash' %>
+<%= render_turbo_stream_flash_messages %>
