--- a/app/views/line_item_dates/new.html.erb
+++ b/app/views/line_item_dates/new.html.erb
@@ -1,2 +1,9 @@
-<h1>LineItemDates#new</h1>
-<p>Find me in app/views/line_item_dates/new.html.erb</p>
+<main class='container'>
+  <%= link_to sanitize('&larr; Back to quote'), quote_path(@quote) %>
+
+  <div class='header'>
+    <h1>New date</h1>
+  </div>
+
+  <%= render 'form', quote: @quote, line_item_date: @line_item_date %>
+</main>
