--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -8,8 +8,10 @@
 
     <%= link_to 'New date',
         new_quote_line_item_date_path(@quote),
+        data: { turbo_frame: dom_id(LineItemDate.new) },
         class: 'btn btn--primary' %>
   </div>
 
+  <%= turbo_frame_tag LineItemDate.new %>
   <%= render @line_item_dates, quote: @quote %>
 </main>
