Use Custom Relation :line_items_ordered on LineItemDate instead of scope :with_ordered_line_items on LineItemDate. Same result but feels shorter and cleaner

--- a/app/views/line_item_dates/_line_item_date.html.erb
+++ b/app/views/line_item_dates/_line_item_date.html.erb
@@ -30,7 +30,7 @@
         <div class="line-item__actions"></div>
       </div>
 
-      <%= render line_item_date.line_items, quote: quote, line_item_date: line_item_date %>
+      <%= render line_item_date.line_items_ordered, quote: quote, line_item_date: line_item_date %>
 
       <div class="line-item-date__footer">
         <%= link_to "Add item",
